# segemehl-21

./: .gitignore  Cargo.toml  output_unmapped_processing.bat
backend/: Cargo.toml
backend/src/: command_line.rs  main.rs  old_formatting.rs  reader.rs  util.rs
core/: Cargo.toml
core/src/: bam_statistics.rs  lib.rs  per_reference_statistics.rs  util.rs
core/src/header/: header.rs  mod.rs
core/src/header/metadata_line/: format_version.rs  grouping_order.rs  metadata.rs  mod.rs  sorting_order.rs  sub_sorting_order.rs
core/src/header/program_line/: mod.rs  program.rs
core/src/header/read_group_line/: mod.rs  platform.rs  read_group.rs
core/src/header/reference_sequence_line/: alternate_locus.rs  mod.rs  molecule_topology.rs  reference_sequence.rs
core/src/statistics/: mod.rs
core/src/statistics/calculation/: frequency_map.rs  mod.rs  unmapped.rs
core/src/statistics/presentation/: cigar_operations.rs  frequency_map.rs  meta.rs  mod.rs
frontend/: Cargo.toml
frontend/src/: box_plots.rs  chromosome_list.rs  file_list.rs  lib.rs
frontend/src/accessories/: highlight.rs  mod.rs
frontend/src/data_repository/: adapter.rs  hash_map.rs  mod.rs  transformer.rs
frontend/src/declarative_test/: draw.rs  draw_constructor.rs  generic_test.rs  mod.rs  plot.rs  plot_config.rs  plot_constructor.rs  transformer_constructor.rs
frontend/src/plots/: bar_plot.rs  mod.rs  stacked_bar_plot.rs  util.rs
frontend/src/transformers/: logarithmic.rs  mod.rs  multiple_select.rs  percentage.rs  select.rs
frontend/src/util/: console.rs  mod.rs
frontend/www/: bootstrap.js  index.html  index.js  package.json  style.css  webpack.config.js
frontend/www/.bin/: create-wasm-app.js
frontend/www/css/: close.css  dropdown.css  fade.css  loader.css  style.css
frontend/www/js/: file_list.js  file_storage.js  numeric_statistics.js  plots.js  reference_list.js  wasm_binding.js  worker.js
(+105 files in other folders)
