[package]
name = "segemehl_21_backend"
version = "0.1.0"
authors = ["Erik Schulze <erikmail3333@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
segemehl_21_core = {version = "0.1.0", path = "../core"}

bam = "0.1.4"
rayon = "1.5.1"
serde = "1.0.126"
serde_json = "1.0.64"
bincode = "1.3.3"
clap = "2.33.3"
indicatif = "0.17.0-beta.1"
console = "0.14.1"