[package]
name = "segemehl_21_core"
version = "0.1.0"
authors = ["Erik Schulze <erikmail3333@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rayon = "1.5.1"
serde = "1.0.126"
serde_derive = "1.0.126"
bam = "0.1.4"
rstest = "0.10.0"
indicatif = "0.17.0-beta.1"
console = "0.14.1"
thiserror = "1.0.29"