[package]
name = "segemehl_21_frontend"
version = "0.1.0"
authors = ["Erik Schulze <erikmail3333@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
segemehl_21_core = {version = "0.1.0", path = "../core"}

web-sys = {version = "0.3.51", features = ["File", "HtmlSelectElement", "HtmlInputElement", "Document", "Element", "EventTarget", "FileList", "MouseEvent", "DomRect"]}
js-sys = "0.3.51"
wasm-bindgen =  {version = "0.2.63", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4.25"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5" }
num-traits = "0.2.14"

serde = "1.0.126"
serde_json = "1.0.64"
serde_derive = "1.0.126"
bincode = "1.3.3"

lazy_static = "1.4.0"

plotters = "0.3.1"
plotters-canvas = "0.3.0"
term = "0.7.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"